*   Mail: info@wordrider.net (issue tracker is preffered) *
*   Issue tracker: http://bugtracker.wordrider.net/       *
***********************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

  Changed : upgraded Substance L&F to version 5.1, upgraded SwingX library to the newest devel version  
  Fixed : UI - UserPreferences dialog - OK not enabled when changed How to update plugins combobox [reported by Alex]

16th January 2009 - FreeRapid Downloader 0.81 released
  Added : Russian translation [thanks to Vdm17!]
  Added : Brazilian portuguese translation [thanks to Tiago Hillebrandt!]
  Added : Turkish translation [thanks to ukrman!]
  Added : Windows - open directory selects file if the file exists
  Changed : UI - User preferences dialog - languages are sorted based on the current locale
  Fixed : Linux - commands from syscmd.properties are not loaded properly [reported by Andre Grott]
  Fixed : clipboard monitoring merged some URL into one at special cases [reported by Alex]
  Fixed : RejectedException - problem solved?

21st December 2008 - FreeRapid Downloader 0.8 released
  Added : new plugin - usercash.com (crypter) [thanks to me! ;-)]
  Added : new plugin - CobraShare.sk [thanks to me! ;-)]
  Added : new plugin - flyshare.cz [thanks to me! ;-)]
  Added : new plugin - Upnito.sk [thanks to me! ;-)]
  Added : new plugin - SaveFile.com [thanks to Alex!]
  Added : new plugin - KewlShare.com [thanks to Alex!]
  Added : new plugin - EnterUpload.com [thanks to Alex!]
  Added : new plugin - MediaFire.com [thanks to Lukiz!]
  Added : new plugin - edisk.cz [thanks to Lukiz!]
  ###Added : Russian translation [thanks to CasTeT!] next time ;-)
  Added : Italian translation [thanks to Stefano!]
  Added : Japanese translation [thanks to Tilt!]