@@ -11,8 +11,10 @@ Added - indicates new functionality or new part of distribution
 Changed - indicates a change in using/behavior FreeRapid
 Fixed - indicates a bug fix
 
-  Changed : upgraded Substance L&F to version 5.1, upgraded SwingX library to the newest devel version  
+  Changed : upgraded Substance L&F to version 5.1, upgraded SwingX library to the newest devel version
+  Fixed : support for only X bytes long files 
   Fixed : UI - UserPreferences dialog - OK not enabled when changed How to update plugins combobox [reported by Alex]
+  Fixed : shutdown commands don't not work properly on FRD path with spaces []
 
 16th January 2009 - FreeRapid Downloader 0.81 released
   Added : Russian translation [thanks to Vdm17!]
